--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,6 +16,6 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
-          context: app
+          context: ./app
           push: true
           tags: ccilabs/case-mgmt:latest
