--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,4 +28,5 @@ jobs:
         with:
           context: ./app
           push: true
+          platforms: linux/amd64,linux/arm64
           tags: ghcr.io/ccilabs/case-mgmt:latest
