use postgresql as default db

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -7,5 +7,7 @@ RUN yarn install --ignore-scripts
 COPY . .
 RUN yarn keystone build
 
+ENV NEXT_TELEMETRY_DISABLED=1
+
 ENTRYPOINT [ "yarn", "start" ]
 CMD [ "--with-migrations" ]
