--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,7 +3,8 @@ name: ci
 on:
   push:
     branches:
-      - "main"
+      - main
+      - feature/*
 
 jobs:
   docker:
@@ -30,3 +31,5 @@ jobs:
           push: true
           platforms: linux/amd64,linux/arm64
           tags: ghcr.io/ccilabs/case-mgmt:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
