--- a/app/package.json
+++ b/app/package.json
@@ -10,9 +10,14 @@
     "dbinit": "keystone prisma migrate dev -n initial"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@keystone-6/auth": "^7.0.0",
     "@keystone-6/core": "^5.0.0",
     "@keystone-6/fields-document": "^7.0.0",
+    "@opensaas/keystone-nextjs-auth": "^27.2.0",
+    "framer-motion": "^10.16.16",
     "typescript": "^4.9.5"
   }
 }
