--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,8 @@
     "dbinit": "keystone prisma migrate dev -n initial"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.8",
+    "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
@@ -18,6 +20,7 @@
     "@keystone-6/fields-document": "^7.0.0",
     "@opensaas/keystone-nextjs-auth": "^27.2.0",
     "framer-motion": "^10.16.16",
+    "graphql": "^16.8.1",
     "typescript": "^4.9.5"
   }
 }
