--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,8 @@
     "@opensaas/keystone-nextjs-auth": "^27.2.0",
     "framer-motion": "^10.16.16",
     "graphql": "^16.8.1",
+    "next-auth": "^4.24.5",
     "typescript": "^4.9.5"
-  }
+  },
+  "devDependencies": {}
 }
