--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -31,3 +31,5 @@ jobs:
           push: true
           platforms: linux/amd64,linux/arm64
           tags: ghcr.io/ccilabs/case-mgmt:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
